--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,58 @@
 body {
   background: blanchedalmond;
 }
+
+.a, .b, .c {
+  border: 3px solid purple;
+  text-align: center;
+  font-size: xx-large;
+  margin: 15px;
+}
+
+
+.b {
+  min-height: 600px;
+}
+
+.a, .c {
+  min-height: 100px;
+}
+  
+}
+  
+}
+
+.a , .c {
+  min-height: 20vh;
+}
+
+
+
+@media (min-width: 600px) {
+    .container {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      
+       
+    }
+
+    .container-2 {
+      display: flex;
+      flex-direction: row;
+    }
+
+    .b {
+      min-width: 80%;
+    }
+    .c{ 
+      min-width: 15.5%;
+    }
+
+   
+
+   }
+
+   
+   }
+   }
