--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,105 @@
 body {
   background: papayawhip;
 }
+
+.a, .b, .c, .d, .e, .f {
+  border: 3px solid purple;
+  text-align: center;
+  font-size: xx-large;
+  margin: 25px;
+}
+
+.a, .f {
+  height: 
+}
+  
+.container {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+  
+}
+
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction column;
+  flex-grow: 3;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 70vh;
+}
+
+header, footer, section, .wrapper {
+  flex-grow: 1;
+  margin: .5em;
+  max-height: 10vh;
+}
+
+
+header, footer {
+  height: 20vh;
+}
+section {
+  display: flex;
+  
+  justify-content: space-between;
+  width: 90%;
+  min-height: 20vh;
+  
+}
+
+section > div {
+  flex-grow: 10;
+  margin: .5em;
+}
+
+
+main {
+  width: 90%;
+  flex-grow: 3;
+  margin: .5em;
+  height: 400px;
+}
+.c, .d, .e {
+  padding: 25px;
+
+}
+
+
+@media (min-width: 600px) {
+  .container {
+ 
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  header {
+    width: 100%;
+    max-height: 10vh;
+  }
+  .wrapper {
+    margin-top: 120px;
+    width: 70%;
+    
+   
+   
+  }
+
+  .c, .d, .e {
+    padding: 25px;
+  }
+
+
+
+ 
+
+
+  footer {
+    width: 40%;
+    flex-grow: 3;
+  }
+}
+
+
+
