--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -10,7 +10,7 @@ body {
 }
 
 .a, .f {
-  height: 
+  height: 100px;
 }
   
 .container {
@@ -68,36 +68,19 @@ main {
 }
 
 
-@media (min-width: 600px) {
-  .container {
+@media screen and (min-width: 600px) {
+  
+
+  .a, .b {
+  height: 50;
+  }
  
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  header {
-    width: 100%;
-    max-height: 10vh;
-  }
-  .wrapper {
-    margin-top: 120px;
-    width: 70%;
-    
-   
-   
-  }
-
-  .c, .d, .e {
-    padding: 25px;
-  }
-
-
-
- 
-
-
-  footer {
-    width: 40%;
-    flex-grow: 3;
+  .f {
+    margin: .5em;
+      flex-grow: 3;
+      min-height:  80vh;
+      
+  
   }
 }
 
